--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
-body {
+@import "tailwindcss/base";
+/* @import "./custom-base.css"; */
+@import "tailwindcss/components";
+/* @import "./custom-components.css"; */
+@import "tailwindcss/utilities";
+
+.headerr{
+  background-image: url("/public/bg2.png");
+}
+
+
+/* @config "./tailwind.admin.config.js"; */
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,8 +18,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
